rename json "name"

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "WarUkraineTechnology",
+  "name": "war-ukraine-technology",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://paveldebchuk.github.io/WarUkraineTechnology/",
